# pairing

./: CHANGELOG.md  Cargo.toml  README.md  test_with_features.sh
.github/workflows/: ci.yml
benches/: pairing_benches.rs
benches/bls12_381/: ec.rs  fq.rs  fq12.rs  fq2.rs  fr.rs  mod.rs
src/: base.rs  lib.rs  wnaf.rs
src/bls12_381/: README.md  ec.rs  fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs  mod.rs  serde_impl.rs
src/bls12_381/tests/: mod.rs
src/bn256/: README.md  ec.rs  fq.rs  fq2.rs  fq6.rs  fr.rs  mod.rs
src/compact_bn256/: README.md  ec.rs  fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs  mod.rs
src/tests/: curve.rs  engine.rs  field.rs  mod.rs  repr.rs
tests/: engine.rs  field.rs  repr.rs
