[package]
name = "pairing_ce"
version = "0.28.3"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <jack@z.cash>",
    "Alex Vlasov <alex.m.vlasov@gmail.com>",
    "Alex Gluchowski <alex@gluchowski.net>"
]
license = "MIT/Apache-2.0"

description = "Pairing-friendly elliptic curve library"
documentation = "https://docs.rs/pairing/"
homepage = "https://github.com/matter-labs/pairing"
repository = "https://github.com/matter-labs/pairing"
edition = "2018"

[dependencies]
rand = "0.4"
byteorder = "1"
cfg-if = "1.0"
ff = {package = "ff_ce", version = "0.14.*", features = ["derive"]}
# ff = { path = '../ff', package = "ff_ce", features = ["derive"]}
serde = {version = "1", features = ["derive"]}

[features]
default = []
asm = ["ff/asm_derive"]
