[package]
name = "pairing"
version = "0.24.0-pre.0"
authors = ["Sean Bowe <ewillbefull@gmail.com>", "Jack Grigg <jack@z.cash>"]
edition = "2021"
rust-version = "1.63"
readme = "README.md"
license = "MIT/Apache-2.0"

description = "Pairing-friendly elliptic curve library"
documentation = "https://docs.rs/pairing/"
homepage = "https://github.com/zkcrypto/pairing"
repository = "https://github.com/zkcrypto/pairing"

[dependencies]
group = { version = "=0.14.0-pre.0", default-features = false }

[badges]
maintenance = { status = "actively-developed" }
